feat: show and create students and teacher

--- a/scss/utilities/_generic.scss
+++ b/scss/utilities/_generic.scss
@@ -226,6 +226,9 @@
 .opacity-half {
   opacity: 0.5 !important;
 }
+.opacity-double-half {
+  opacity: 0.25 !important;
+}
 
 .reset-list-style {
   list-style: none;
@@ -283,7 +286,11 @@
   height: calc(100% - 60px) !important;
 }
 
-.theme--light.v-data-table > .v-data-table__wrapper > table > tbody > tr:hover:not(.v-data-table__expanded__content):not(.v-data-table__empty-wrapper) {
+.theme--light.v-data-table
+  > .v-data-table__wrapper
+  > table
+  > tbody
+  > tr:hover:not(.v-data-table__expanded__content):not(.v-data-table__empty-wrapper) {
   background-color: colors.getColorWithOpacity("iason", base, 0.05) !important;
 }
 
